--- a/homework1/package.json
+++ b/homework1/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha --require esm src/__tests__/**/*.js"
   },
-  "author": "",
+  "author": "Andrew Seaman, Booker Martin, Ian Green, Veronica Backer-Peral",
   "license": "ISC",
   "dependencies": {
     "esm": "^3.2.25",
